# cpp-publisher

./: CMakeLists.txt
src/: CMakeLists.txt  cpp-publisher.hpp
src/implementations/: behavior-factory.hpp  behavior.hpp  emitter.hpp  main.hpp  publisher-factory.hpp  publisher.hpp  subscription.hpp
src/implementations/operators/: base-operator-emitter.hpp  filter-emitter-operator-factory.hpp  filter-emitter-operator.hpp  filter-emitter.hpp  main.hpp  map-emitter-operator-factory.hpp  map-emitter-operator.hpp  map-emitter.hpp
src/interfaces/: behavior.hpp  emitter.hpp  main.hpp  publisher.hpp  source.hpp  subscription.hpp
src/interfaces/operators/: emitter-operator.hpp  main.hpp
src/operators/: map.hpp
src/utils/: compose.hpp  instance-counter.hpp  main.hpp
tests/: CMakeLists.txt  main_test.cpp
